--- a/libbeat/docs/index.asciidoc
+++ b/libbeat/docs/index.asciidoc
@@ -23,7 +23,7 @@ include::./gettingstarted.asciidoc[]
 
 include::./breaking.asciidoc[]
 
-include::./upgrading.asciidoc[]
+include::./upgrading-to-7.asciidoc[]
 
 include::./config-file-format.asciidoc[]
 
