--- a/filebeat/docs/fields.asciidoc
+++ b/filebeat/docs/fields.asciidoc
@@ -15,6 +15,7 @@ grouped in the following categories:
 * <<exported-fields-apache>>
 * <<exported-fields-auditd>>
 * <<exported-fields-beat>>
+* <<exported-fields-cisco>>
 * <<exported-fields-cloud>>
 * <<exported-fields-coredns>>
 * <<exported-fields-docker-processor>>
@@ -1046,6 +1047,189 @@ alias to: host.name
 type: alias
 
 alias to: agent.hostname
+
+--
+
+[[exported-fields-cisco]]
+== Cisco fields
+
+Module for handling Cisco network device logs.
+
+
+
+[float]
+== cisco fields
+
+Fields from Cisco logs.
+
+
+
+[float]
+== asa fields
+
+Fields for Cisco ASA Firewall.
+
+
+
+*`cisco.asa.message_id`*::
++
+--
+type: keyword
+
+The Cisco ASA message identifier.
+
+
+--
+
+*`cisco.asa.suffix`*::
++
+--
+type: keyword
+
+example: session
+
+Optional suffix after %ASA identifier.
+
+
+--
+
+*`cisco.asa.source_interface`*::
++
+--
+type: keyword
+
+Source interface for the flow or event.
+
+
+--
+
+*`cisco.asa.destination_interface`*::
++
+--
+type: keyword
+
+Destination interface for the flow or event.
+
+
+--
+
+*`cisco.asa.list_id`*::
++
+--
+type: keyword
+
+Name of the Access Control List that matched this event.
+
+
+--
+
+*`cisco.asa.source_username`*::
++
+--
+type: keyword
+
+Name of the user that is the source for this event.
+
+
+--
+
+*`cisco.asa.destination_username`*::
++
+--
+type: keyword
+
+Name of the user that is the destination for this event.
+
+
+--
+
+*`cisco.asa.mapped_source_ip`*::
++
+--
+type: ip
+
+The translated source IP address.
+
+
+--
+
+*`cisco.asa.mapped_source_port`*::
++
+--
+type: long
+
+The translated source port.
+
+
+--
+
+*`cisco.asa.mapped_destination_ip`*::
++
+--
+type: ip
+
+The translated destination IP address.
+
+
+--
+
+*`cisco.asa.mapped_destination_port`*::
++
+--
+type: long
+
+The translated destination port.
+
+
+--
+
+*`cisco.asa.threat_level`*::
++
+--
+type: keyword
+
+Threat level for malware / botnet traffic. One of very-low, low, moderate, high or very-high.
+
+
+--
+
+*`cisco.asa.threat_category`*::
++
+--
+type: keyword
+
+Category for the malware / botnet traffic. For example: virus, botnet, trojan, etc.
+
+
+--
+
+*`cisco.asa.connection_id`*::
++
+--
+type: keyword
+
+Unique identifier for a flow.
+
+
+--
+
+*`cisco.asa.icmp_type`*::
++
+--
+type: short
+
+ICMP type.
+
+
+--
+
+*`cisco.asa.icmp_code`*::
++
+--
+type: short
+
+ICMP code.
+
 
 --
 
