--- a/filebeat/docs/fields.asciidoc
+++ b/filebeat/docs/fields.asciidoc
@@ -4752,6 +4752,17 @@ The layer from which this event originated: rest, transport or ip_filter
 
 --
 
+*`elasticsearch.audit.event_type`*::
++
+--
+type: keyword
+
+example: access_granted
+
+The type of event that occurred: anonymous_access_denied, authentication_failed, access_denied, access_granted, connection_granted, connection_denied, tampered_request, run_as_granted, run_as_denied
+
+--
+
 *`elasticsearch.audit.origin.type`*::
 +
 --
@@ -4851,15 +4862,6 @@ The type of request that was executed
 type: alias
 
 alias to: http.request.body.content
-
---
-
-*`elasticsearch.audit.event_type`*::
-+
---
-type: alias
-
-alias to: event.type
 
 --
 
