A few more system.auth fields missing from ecs-mig

--- a/libbeat/docs/field-name-changes.asciidoc
+++ b/libbeat/docs/field-name-changes.asciidoc
@@ -294,6 +294,7 @@
 |`system.auth.groupadd.gid`            |`group.id`
 |`system.auth.groupadd.name`            |`group.name`
 |`system.auth.hostname`            |`host.hostname`
+|`system.auth.message`            |`message`
 |`system.auth.pid`            |`process.pid`
 |`system.auth.program`            |`process.name`
 |`system.auth.ssh.geoip.city_name`            |`source.geo.city_name`
@@ -304,6 +305,7 @@
 |`system.auth.ssh.geoip.region_name`            |`source.geo.region_name`
 |`system.auth.ssh.ip`            |`source.ip`
 |`system.auth.ssh.port`            |`source.port`
+|`system.auth.timestamp`            |`@timestamp`
 |`system.auth.user`            |`user.name`
 |`system.auth.useradd.gid`            |`group.id`
 |`system.auth.useradd.name`            |`user.name`
