--- a/libbeat/docs/upgrading.asciidoc
+++ b/libbeat/docs/upgrading.asciidoc
@@ -6,6 +6,7 @@ This section gives general recommendations for upgrading {beats} shippers:
 * <<upgrading-minor-versions>>
 * <<upgrading-6-to-7>>
 * <<upgrade-mapping-template>>
+* <<troubleshooting-upgrade>>
 
 If you're upgrading other products in the stack, also read the
 {stack-ref}/index.html[Elastic Stack Installation and Upgrade Guide]. 
@@ -31,17 +32,26 @@ If you're upgrading other products in the stack, also read the
 {stack-ref}/index.html[Elastic Stack Installation and Upgrade Guide]. 
 
 We recommend that you fully upgrade {es} and {kib} to version 7.0
-before upgrading {beats}. If you're on Beats 6.0 through 6.6,
-<<upgrading-to-6.7,upgrade to Beats 6.7>> *before* doing the {es} upgrade.
+before upgrading {beats}. If you're on {beats} 6.0 through 6.6,
+upgrade to {beats} 6.7 *before* doing the {es} upgrade.
 
 Upgrading between non-consecutive major versions (e.g. 5.x to 7.x) is not
 supported.
 
-// REVIEWERS: I think it's worth begin redundant here ^^ because users often
-// don't read topics in the order we expect.
+IMPORTANT: Please read through all upgrade steps before proceeding. Some of the
+steps are required before running the upgraded software for the first time.
+
+// REVIEWERS: Historically our docs have not described how to actually upgrade.
+// We just cover the things users need to be aware of. However, to have parity
+// with the install docs for other stack components, I think we should add more
+// detail, similar to what Kibana does: https://www.elastic.co/guide/en/kibana/master/upgrade-standard.html
+// WDYT?
+//
+// Besides copying over the config file (for all beats), and pointing to the 
+// registry file for Filebeat, what else needs to be preserved.
 
 [[upgrading-to-6.7]]
-==== Upgrade to Beats 6.7 before upgrading to 7.0
+==== Upgrade to {beats} 6.7 before upgrading to 7.0
 
 The upgrade procedure assumes that you have {beats} 6.7 installed. If you're on
 a previous 6.x version of {beats}, upgrade to version 6.7 first. This is
@@ -97,7 +107,7 @@ in the Breaking Changes section of the release notes, make sure you understand
 the alternatives that we provide.
 
 [[enable-ecs-compatibility]]
-==== Enable compatibility layer for Elastic Common Schema (ECS) fields
+==== Enable the compatibility layer for Elastic Common Schema (ECS) fields
 
 Starting with 7.0, the fields exported by {beats} conform to the
 {ecs-ref}/index.html[Elastic Common Schema (ECS)]. Many of the exported fields
@@ -107,29 +117,29 @@ changes in 7.0] for the full list of changed names.
 To help you transition to the new fields, we provide a compatibility layer in
 the form of ECS-compatible field aliases. To use the aliases, set
 `migration.6_to_7.enabled: true` in the Beat's configuration file *before* you
-run Beats 7.0 to ingest data for the first time.
+run {beats} 7.0 to ingest data for the first time.
+
+// REVIEWERS: I'm not sure the following statement is correct. I was not able
+// to use the dashboards I saved from 6.x with 7.0. I did a very quick and dirty
+// upgrade of the stack tho so might have missed something critical. 
 
 The compatibility layer enables you to use 6.x dashboards and visualizations
 with indices created by {beats} 7.0 or later.
 
-// TODO: Describe how to wipe out old data and overwrite the template for
-// situations where users ingest data before realizing they need to set the
-// migration flag.
-//
-// I do wonder why this flag is not the default, but maybe it creates a lot of
-// extra noise for users who don't want compatibility?
+Did you run the Beat before reading this section? That's OK. See the clean-up
+steps described under <<missing-fields>>.
 
 ==== Upgrade dashboards
 
-We recommend that you reload the {kib} dashboards after upgrading {kib} and
+We recommend that you re-import the {kib} dashboards after upgrading {kib} and
 {beats}. This way, you can take advantage of the new {beats} dashboards created
 for the 7.0 release. 
 
-Reloading the dashboards will overwrite any manual changes that you've
-made. To avoid overwriting existing dashboards, save them under a new ID before
-proceeding.
+Re-importing the dashboards will overwrite any manual changes that you've
+made. To avoid overwriting existing dashboards, save any modified dashboards
+under a new ID before proceeding.
 
-To reload the dashboards, run the `setup` command with the `--dashboards`
+To re-import the dashboards, run the `setup` command with the `--dashboards`
 option specified. For example:
 
 [source,shell]
@@ -137,24 +147,60 @@ option specified. For example:
 metricbeat setup --dashboards
 ----
 
-Also, if you plan to run {beats} 6.7 and 7.0 in parallel, set
-`migration.6_to_7.enabled: true` to make 6.x dashboards compatible with 7.0
-{beats} indices *before* you start ingesting data. For more information, see
-<<enable-ecs-compatibility>>.
+Also, if you plan to run {beats} 6.7 and 7.0 in parallel,
+<<enable-ecs-compatibility,enable the compatibility layer>> *before* you start
+ingesting data. 
 
+[[upgrade-logstash-config]]
 ==== Configure {ls} to use versioned templates and indices
 
-Before upgrading to 7.0, make sure {ls} uses versioned templates and indices. 
-Otherwise, after you upgrade, {ls} will stop ingesting data because of field
-conflicts.
+If you're using {ls} to ingest data, make sure {ls} uses versioned templates and
+indices. Otherwise, after you upgrade, {ls} will stop ingesting data because of
+field conflicts. To use versioned index templates and indices, configure the
+{ls} `index` setting as recommended in the
+{logstash-ref}/plugins-inputs-beats.html[{beats} input plugin] documentation and
+allow {beats} to manage the index template:
 
-For the recommended {ls} configuration, see the
-{logstash-ref}/plugins-inputs-beats.html[{beats} input plugin] documentation.
+[source,json]
+----
+    manage_template => false
+    index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}" 
+----
+
+When you use this configuration, the index name is set to match the index
+pattern in the {beats} index template.
+
+IMPORTANT: The index name must match the index pattern in the {beats} index
+template, or {beats} dashboards and visualizations will not work as expected.
+For example, if {ls} sends events to an index called +metricbeat-7-{localdate}+,
+but the index template expects indices to match +metricbeat-{stack-version}-*+,
+your {beats} dashboards and visualizations will not display the data sent by
+{ls}.
+
+// REVIEWERS: The review comment said "things will break in a very opaque
+// manner." I'm assuming we mean that the Beats dashboards will stop working,
+// but I haven't had time to test this. ^^
+
+[[load-index-template-manually]]
+==== Load the 7.0 index template manually for outputs other than {es}
+
+If your {beats} configuration use an output other than `elasticsearch`, load
+the index template manually into {es} *before* ingesting any data into 7.0
+indices.
+
+To load the template manually, run the `setup` command with the `--template`
+flag specified. Temporarily enable the `elasticsearch` output when you run this
+command. For example:
+
+[source,shell]
+--
+metricbeat setup --template -E output.logstash.enabled=false -E 'output.elasticsearch.hosts=["localhost:9200"]'
+--
 
 [[migrate-filebeat-registry]]
-==== Migrate Filebeat registry to use new format
+==== Migrate {filebeat} registry to use new format
 
-Starting with the 7.0 version, {filebeat} stores the registry in a directory
+Starting with version 7.0, {filebeat} stores the registry in a directory
 structure. If Filebeat finds an old registry file at the path set by
 `filebeat.registry.path`, it will automatically migrate the registry file to the
 new format. If the registry file is at a different location, set
@@ -184,9 +230,6 @@ lifecycle management. The following privileges are required:
 To disable index lifecycle management, set `setup.ilm.enabled: false` in the
 {beats} configuration file.
 
-// TODO: Add a section that describes what to do if you've configured an output
-// other than Elasticsearch. 
-
 [[upgrade-mapping-template]]
 === Upgrade the {es} mapping template
 
@@ -214,3 +257,68 @@ template when you move to a new version.
 If downtime is not acceptable, another possible approach is to configure a
 different index pattern in the new Beat version, but this will likely require
 adjustments to your {kib} dashboards.
+
+[[troubleshooting-upgrade]]
+=== Troubleshooting {beats} upgrade issues
+
+This section describes common problems you might encounter when upgrading to
+{beats} 7.x.
+
+You can avoid some of these problems by reading <<upgrading-6-to-7>> before
+upgrading {beats}.
+
+// REVIEWERS: I really need help fleshing out this section. This is all based
+// on speculation. Not sure I'm describing the symptoms correctly because this
+// content is based on input from reviewers, not my own testing.
+
+[[missing-fields]]
+==== Missing fields or too many fields in the index
+
+You may have run the Beat before loading the required index template. To clean
+up and start again:
+
+. Delete the index that was created when you ran the Beat. For example:
++
+["source","sh",subs="attributes"]
+----
+DELETE metricbeat-{stack-version}-{localdate}*
+----
+
+. If you want the index to work with 6.x dashboards, turn on the compatibility
+layer. See <<enable-ecs-compatibility>>.
+
+. Load the correct index template:
+
+.. If you're sending events directly to {es}, configure the following settings
+in the {beats} configuration file to overwrite the index template:
++
+[source,yaml]
+----
+setup.template.enabled: true
+setup.template.overwrite: true
+----
+// CONSOLE
+
+.. If you're sending events to a different output, such as {ls}, load the
+template manually. See <<load-index-template-manually>>.
+
+. Restart {beats}.
+
+// REVIEWERS: If users mess up and run Filebeat before setting up the index
+// template correctly (for example, if they don't turn on compatibility), is there
+// some way to recover the previous cursor location to avoid dropped or
+// duplicate events?
+
+[[old-dashboards-failing]]
+==== 6.x dashboards not showing data from 7.0 shippers
+
+You might have run the Beat without turning on the compatibility layer. See
+<<missing-fields>>.
+
+[[logstash-data-missing]]
+==== Data parsed by {ls} not appearing in 7.0 dashboards
+
+You might be writing to an index that doesn't match the index pattern used
+by {beats}. See <<upgrade-logstash-config>>.
+
+
