--- a/CHANGELOG-developer.asciidoc
+++ b/CHANGELOG-developer.asciidoc
@@ -12,8 +12,11 @@ other Beats should be migrated.
 
 Note: This changelog was only started after the 6.3 release.
 
-=== Beats version 6.7
-https://github.com/elastic/beats/compare/6.6..6.7[View commits]
+=== Beats version 6.7.1
+https://github.com/elastic/beats/compare/v6.7.0..6.7.1[Check the HEAD diff]
+
+=== Beats version 6.7.0
+https://github.com/elastic/beats/compare/6.6..v6.7.0[View commits]
 
 ==== Bugfixes
 
