--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -3,6 +3,51 @@
 :issue: https://github.com/elastic/beats/issues/
 :pull: https://github.com/elastic/beats/pull/
 
+[[release-notes-7.0.0-rc2]]
+=== Beats version 7.0.0-rc2
+https://github.com/elastic/beats/compare/v7.0.0-rc1...v7.0.0-rc2[Check the HEAD diff]
+
+==== Breaking changes
+
+*Auditbeat*
+
+- Process dataset: Only report processes with executable. {pull}11232[11232]
+- Shorten entity IDs. {pull}11405[11405]
+
+*Metricbeat*
+
+- Add connection and request timeouts for HTTP helper. {pull}11032[11032]
+
+==== Bugfixes
+
+*Affecting all Beats*
+
+- Fixed OS family classification in `add_host_metadata` for Amazon Linux, Raspbian, and RedHat Linux. {issue}9134[9134] {pull}11494[11494]
+
+*Auditbeat*
+
+- Package dataset: dlopen versioned librpm shared objects. {pull}11565[11565]
+
+*Filebeat*
+
+- Don't apply multiline rules in Logstash json logs. {pull}11346[11346]
+- Fix panic in add_kubernetes_metadata processor when key `log` does not exist. {issue}11543[11543] {pull}11549[11549]
+- Fix goroutine leak happening when harvesters are dynamically stopped. {pull}11263[11263]
+
+*Metricbeat*
+
+- Add _bucket to histogram metrics in Prometheus Collector {pull}11578[11578]
+
+==== Added
+
+*Auditbeat*
+
+- Login dataset: Add event category and type. {pull}11339[11339]
+
+*Filebeat*
+
+- Add support for MySQL 8.0, Percona 8.0 and MariaDB 10.3. {pull}11417[11417]
+
 [[release-notes-7.0.0-rc1]]
 === Beats version 7.0.0-rc1
 https://github.com/elastic/beats/compare/v7.0.0-beta1...v7.0.0-rc1[Check the HEAD diff]
@@ -687,6 +732,22 @@ https://github.com/elastic/beats/compare/v6.5.0...v7.0.0-alpha1[View commits]
 - Add support to decode HTTP bodies compressed with `gzip` and `deflate`. {pull}7915[7915]
 - Added support to calculate certificates' fingerprints (MD5, SHA-1, SHA-256). {issue}8180[8180]
 - Support new TLS version negotiation introduced in TLS 1.3. {issue}8647[8647].
+
+[[release-notes-6.7.1]]
+=== Beats version 6.7.1
+https://github.com/elastic/beats/compare/v6.7.0...v6.7.1[View commits]
+
+==== Breaking changes
+
+*Affecting all Beats*
+
+- Initialize the Paths before the keystore and save the keystore into `data/{beatname}.keystore`. {pull}10706[10706]
+
+==== Bugfixes
+
+*Affecting all Beats*
+
+- Remove IP fields from default_field in Elasticsearch template. {pull}11399[11399]
 
 [[release-notes-6.7.0]]
 === Beats version 6.7.0
