--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -48,12 +48,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 
 *Auditbeat*
 
-- Enable System module config on Windows. {pull}10237[10237]
-- Package: Disable librpm signal handlers. {pull}10694[10694]
-- Login: Handle different bad login UTMP types. {pull}10865[10865]
-- System module: Fix and unify bucket closing logic. {pull}10897[10897]
-- User dataset: Numerous fixes to error handling. {pull}10942[10942]
-- Package dataset: dlopen versioned librpm shared objects.
+- Package dataset: dlopen versioned librpm shared objects. {pull}11565[11565]
 
 *Filebeat*
 
