--- a/CHANGELOG-developer.next.asciidoc
+++ b/CHANGELOG-developer.next.asciidoc
@@ -14,20 +14,15 @@ Note: This changelog documents the current changes which are not yet present in
 an actual release.
 
 === Beats version HEAD
-https://github.com/elastic/beats/compare/v7.0.0-beta1..master[Check the HEAD diff]
+https://github.com/elastic/beats/compare/v7.0.0-rc2..master[Check the HEAD diff]
 
-The list below covers the major changes between 7.0.0-beta1 and master only.
+The list below covers the major changes between 7.0.0-rc2 and master only.
 
 ==== Breaking changes
 
-- Remove support for deprecated `GenRootCmd` methods. {pull}10721[10721]
-- Remove SkipNormalization, SkipAgentMetadata, SkipAddHostName. {pull}10801[10801] {pull}10769[10769]
 - Move Fields from package libbeat/common to libbeat/mapping. {pull}11198[11198]
 
 ==== Bugfixes
-
-- Align default index between elasticsearch and logstash and kafka output. {pull}10841[10841]
-- Fix duplication check for `append_fields` option. {pull}10959[10959]
 
 ==== Added
 
@@ -35,7 +30,6 @@ The list below covers the major changes between 7.0.0-beta1 and master only.
 - The `beat.Event` accessor methods now support `@metadata` keys. {pull}10761[10761]
 - Assertion for documented fields in tests fails if any of the fields in the tested event is documented as an alias. {pull}10921[10921]
 - Support for Logger in the Metricset base instance. {pull}11106[11106]
-- Introduce processing.Support to instance.Setting. This allows Beats to fully modify the event processing. {pull}10801[10801]
 - Filebeat modules can now use ingest pipelines in YAML format. {pull}11209[11209]
 - Added support for using PYTHON_EXE to control what Python interpreter is used
   by `make` and `mage`. Example: `export PYTHON_EXE=python2.7`. {pull}11212[11212]
