--- a/libbeat/docs/breaking.asciidoc
+++ b/libbeat/docs/breaking.asciidoc
@@ -34,6 +34,26 @@ The old behavior of escaping HTML can still be configured by `escape_html:
 true` in the outputs configuration.
 
 //tag::notable-breaking-changes[]
+==== Filebeat registry
+
+Filebeat will store the registry in a sub-directory, starting with version 7.0.
+The directory is configured using the new `filebeat.registry.path` setting. 
+Filebeat will automatically migrate the registry file, if it find the old
+registry file at the configured location.
+
+The settings `filebeat.registry_flush` and `filebeat.registry_file_permission`
+have been renamed to `filebeat.registry.flush` and
+`filebeat.registry.file_permission`.
+
+//end::notable-breaking-changes[]
+
+==== ILM support
+
+Support for Index Lifecycle Management is GA with Beats version 7.0. This
+release moved most ILM setting from the `output.elasticsearch.ilm` namespace to
+the `setup.ilm` namespace.
+
+//tag::notable-breaking-changes[]
 
 ==== Field name changes
 
@@ -55,20 +75,6 @@ with the data types used in the Elasticsearch index template.
 |`process.pid`  |string |number
 |`process.ppid` |string |number
 |======================
-
-//tag::notable-breaking-changes[]
-==== Filebeat registry
-
-Filebeat will store the registry in a sub-directory, starting with version 7.0.
-The directory is configured using the new `filebeat.registry.path` setting. 
-Filebeat will automatically migrate the registry file, if it find the old
-registry file at the configured location.
-
-The settings `filebeat.registry_flush` and `filebeat.registry_file_permission`
-have been renamed to `filebeat.registry.flush` and
-`filebeat.registry.file_permission`.
-
-//end::notable-breaking-changes[]
 
 [[breaking-changes-6.7]]
 === Breaking changes in 6.7
