--- a/libbeat/docs/breaking.asciidoc
+++ b/libbeat/docs/breaking.asciidoc
@@ -26,20 +26,20 @@ See the following topics for a description of breaking changes:
 This section discusses the main changes that you should be aware of if you
 upgrade the Beats to version 7.0. {see-relnotes}
 
-==== Disable HTML escaping
+==== HTML escaping is disabled by default
 
 Starting with verion 7.0, embedded HTML or special symbols like `<` and `>` are
-not escaped anymore by default when publishing events.
-The old behavior of escaping HTML can still be configured by `escape_html:
-true` in the outputs configuration.
+no longer escaped by default when publishing events.
+To configure the old behavior of escaping HTML, set `escape_html:
+true` in the output configuration.
 
 //tag::notable-breaking-changes[]
 ==== Filebeat registry
 
-Filebeat will store the registry in a sub-directory, starting with version 7.0.
-The directory is configured using the new `filebeat.registry.path` setting. 
-Filebeat will automatically migrate the registry file, if it find the old
-registry file at the configured location.
+Starting with version 7.0, Filebeat stores the registry in a sub-directory.
+The directory is configured using the `filebeat.registry.path` setting.
+If Filebeat finds an old registry file at the configured location, it will
+automatically migrate the registry file to the new format.
 
 The settings `filebeat.registry_flush` and `filebeat.registry_file_permission`
 have been renamed to `filebeat.registry.flush` and
@@ -50,7 +50,7 @@ have been renamed to `filebeat.registry.flush` and
 ==== ILM support
 
 Support for Index Lifecycle Management is GA with Beats version 7.0. This
-release moved most ILM setting from the `output.elasticsearch.ilm` namespace to
+release moved most ILM settings from the `output.elasticsearch.ilm` namespace to
 the `setup.ilm` namespace.
 
 //tag::notable-breaking-changes[]
